fix(ai): constrain file tools to project roots